<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="153dp"
        android:layout_height="134dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="131dp"
        android:layout_marginTop="26dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/admin" />

    <EditText
        android:id="@+id/searchFilter"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/imageView"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:hint="@string/searchAccount"
        android:importantForAutofill="no"
        android:inputType="date|textPersonName|text|textAutoComplete|textEmailAddress|phone"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="16sp"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/searchFilter"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/The_list"
        android:textColor="@color/black"
        android:textSize="20sp"
        />

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="207dp"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="3dp"
        android:choiceMode="multipleChoice">

    </ListView>

    <Button
        android:id="@+id/addAccount"
        android:layout_width="103dp"
        android:layout_height="19dp"
        android:layout_below="@+id/listView"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="153dp"
        android:background="@drawable/custom_button"
        android:text="@string/add_account"
        android:textAllCaps="false"
        android:textColor="#242323"
        android:onClick="onClick"
        />



</RelativeLayout>