<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".AccountActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/accountDetails"
        android:layout_marginBottom="-8dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/account_name"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/accountDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/listAccount"
        android:layout_marginBottom="-4dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/account_details"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <ListView
        android:id="@+id/listAccount"
        android:layout_width="229dp"
        android:layout_height="118dp"

        android:layout_above="@+id/linearLayout1"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="92dp"
        android:layout_marginBottom="11dp"
        android:choiceMode="multipleChoice" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:layout_above="@+id/textView1"
        android:layout_marginBottom="64dp"
        android:orientation="horizontal"
        android:padding="10dp">

        <Button
            android:id="@+id/delete"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:background="#B2A0F6"
            android:text="@string/delete_n_account"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textStyle="bold" />

        <Button
            android:id="@+id/editacc"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:background="#B2A0F6"
            android:text="@string/edit_n_account"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/listView"
        android:layout_marginBottom="6dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/list_with_plates"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/listView"
        android:layout_width="229dp"
        android:layout_height="118dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="94dp"
        android:layout_marginBottom="155dp"
        android:choiceMode="multipleChoice" />

    <Button
        android:id="@+id/add_plate"
        android:layout_width="110dp"
        android:layout_height="35dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="154dp"
        android:layout_marginEnd="147dp"
        android:layout_marginBottom="72dp"
        android:background="#B2A0F6"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/add_plate" />


</RelativeLayout>