<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="315dp"
        android:layout_height="321dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="48dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/parking" />

    <Button
        android:id="@+id/user"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="124dp"
        android:layout_marginEnd="132dp"
        android:background="@android:color/holo_blue_bright"
        android:text="@string/User"
        android:textAllCaps="false"
        android:textColor="#242323"
        android:textSize="36sp"

        />

    <Button
        android:id="@+id/admin1"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="149dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="51dp"
        android:layout_marginEnd="129dp"
        android:background="@android:color/holo_blue_bright"
        android:text="@string/Admin"
        android:textAllCaps="false"
        android:textColor="#242323"
        android:textSize="36sp"
        tools:ignore="InvalidId" />


</RelativeLayout>
