<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryBackground"
    tools:context=".PlateActivity">


    <TextView
        android:id="@+id/numberPlates"
        android:layout_width="158dp"
        android:layout_height="53dp"
        android:layout_above="@+id/linearLayout"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="127dp"
        android:layout_marginBottom="9dp"
        android:text="@string/plate_number"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
        android:textColor="@color/colorFormBackground" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="261dp"
        android:layout_height="152dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="73dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="359dp"
        android:background="@color/colorFormBackground"
        android:orientation="vertical"
        android:padding="10dp">

        <ListView
            android:id="@+id/listPlateListView"
            android:layout_width="237dp"
            android:layout_height="109dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="73dp"
            android:layout_marginBottom="400dp"
            android:choiceMode="multipleChoice">

        </ListView>

    </LinearLayout>


    <Button
        android:id="@+id/editTechButton"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="81dp"
        android:layout_marginBottom="298dp"
        android:text="@string/details_technical_passport"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="139dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout11"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="132dp"
        android:layout_marginBottom="1dp"
        android:lineSpacingExtra="7dp"
        android:text="@string/click_up_to_edit"
        android:textAlignment="center"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textColor="@color/colorFormBackground" />

    <LinearLayout
        android:id="@+id/linearLayout11"
        android:layout_width="261dp"
        android:layout_height="152dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="75dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="115dp"
        android:background="@color/colorFormBackground"
        android:orientation="vertical"
        android:padding="10dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/feed_recycler_view"
            android:layout_width="238dp"
            android:layout_height="129dp"
            android:layout_marginEnd="76dp"
            android:layout_marginBottom="141dp">

        </androidx.recyclerview.widget.RecyclerView>


    </LinearLayout>

    <Button
        android:id="@+id/editPlate"
        android:layout_width="118dp"
        android:layout_height="37dp"
        android:layout_above="@+id/deletePlate"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="148dp"
        android:layout_marginBottom="-1dp"
        android:text="@string/edit_plate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/deletePlate"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="147dp"
        android:layout_marginBottom="12dp"
        android:text="@string/delete_plate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</RelativeLayout>